--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@supabase/supabase-js": "^2.39.3",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.0",
     "langchain": "^0.1.21",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.2.1",
     "razorpay": "^2.9.2",
     "react": "^18",
